rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_to_mutate_not_in_scope.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::mutator;
use syn::visit_mut::VisitMut;

#[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, rust_writer::ast::implementors::ItemToImpl<'a>)]
struct SomeStruct;

fn main() {}
